# opie

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  Makefile  README.md  Tools.md  cabal.haskell-ci  cabal.project  proj.cabal
app/: Main.hs
bench/: Main.hs
script/: format.sh  install.sh  update.sh
src/: Lib.hs
