cabal-version:      2.4
name:               proj
version:            0.0.0.0
author:             Shinya Yamaguchi
maintainer:         ingronze@gmail.com
copyright:          2020 waddlaw
license:            MIT
category:           dummy
synopsis:           dummy
description:        dummy dummy
extra-source-files:
  README.md
  Changelog.md

tested-with:        GHC ==8.8.1

source-repository head
  type:     git
  location: git@github.com:waddlaw/peoj.git

flag pedantic
  manual:  True
  default: False

flag trace
  manual:  True
  default: False

common deps
  build-depends:
    , base  ^>=4.13
    , rio   ^>=0.1

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  if flag(pedantic)
    ghc-options: -Werror

  if flag(trace)
    build-depends: haskell-stack-trace-plugin
    ghc-options:   -fplugin=StackTrace.Plugin

  default-extensions:
    NoImplicitPrelude
    NoStarIsType
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    ExtendedDefaultRules
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralisedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010

library
  import:          deps
  hs-source-dirs:  src
  build-depends:

  -- cabal-fmt: expand src
  exposed-modules: Lib

executable app
  import:        deps
  main-is:       app/Main.hs
  ghc-options:   -O2
  build-depends:

test-suite unit-test
  import:             deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/unit
  main-is:            Driver.hs
  build-depends:      tasty ^>=1.2
  build-tool-depends: tasty-discover:tasty-discover ^>=4.2

  -- cabal-fmt: expand test/unit -Driver
  other-modules:
